syntax="proto2";
package douyin.extra.first;

option go_package = "../pb";

service comment_action{
  rpc comment_action(douyin_comment_action_request)returns(douyin_comment_aciton_response){}
}

service comment_list{
  rpc comment_list(douyin_comment_list_request)returns(douyin_comment_list_response){}
}

message douyin_comment_action_request{
  required int64 user_id = 1;//用户id
  required string token = 2;//用户鉴权token
  required int64 video_id= 3;//视频id
  required int32 action_type = 4;//1-发布评论，2-删除评论
  optional string comment_text = 5;//用户填写的评论内容
  optional int64 comment_id = 6;//要删除的评论id
}

message douyin_comment_aciton_response{
  required int32 status_code = 1;//状态码0成功，其他失败
  optional string status_msg = 2;//返回状态描述
  optional Comment comment = 3;//评论成功返回评论内容，不需要返回评论列表
}

message Comment{
  required int64 id = 1;//视频评论id
  required User user = 2;//评论用户信息
  required string content = 3;//评论内容
  required string create_date = 4;//评论发布日期，格式mm-dd
}

message User {
  required int64 id = 1;  //用户id
  required string name = 2; //用户名称
  optional int64 follow_count = 3;  //关注总数
  optional int64 follower_count = 4;  //粉丝总数
  required bool is_follow = 5;  //true-已关注，false-未关注
}

message douyin_comment_list_request{
  required string token = 1;//用户鉴权toekn
  required int64 video_id = 2;//视频id
}

message douyin_comment_list_response{
  required int32 status_code = 1;//状态码 0 成功，其他值失败
  optional string status_msg = 2;//返回状态描述
  repeated Comment comment_list = 3;//评论列表
}
